2003-09-25  Mark Mitchell  <mark@codesourcery.com>

	* qm/executable.py (Executable.Kill): New method.
	(Executable._GetChildPID): Improve documentation.
	(TimeoutExecutable): Update documentation about timeouts on
	Windows.
	(TimeoutExecutable.__init__): Do not ignore timeouts on Windows.
	(TimeoutExecutable._HandleChild): Create a monitoring thread on
	Windows.
	(TimeoutExecutable.Run): Wiat for the monitoring thread to exit.
	(TimeoutExecutable.__Monitor): New method.

2003-09-21  Mark Mitchell  <mark@codesourcery.com>

	* qm/xmlutil.py (get_children): Remove.
	(get_child_texts): Don't use it.
	* qm/test/base.py (get_extension_class_names_in_directory):
	Support new class directory format.
	* qm/test/cmdline.py (QMTest.__ExecuteRegister): Generate the
	class directory using the new directory format.
	* qm/test/database.py (load_database): Do not use get_children.
	* qm/test/result.py (Result.MakeDomNode): Revise result format.
	(__all__): New variable.
	* qm/test/classes.qmc: Regenerated.
	* qm/test/classes/xml_result_stream.py
	(XMLResultStream.WriteAnnotation): Use indentation when writing
	out results.
	(XMLResultStream.WriteResult): Likewise.
	(XMLResultReader._get_result_from_dom): Rename to ...
	(XMLResultReader._GetResultFromDomNode): ... this.  Support old
	and new formats.
	* qm/test/share/dtds/result.dtd: Update.
	* qm/test/share/dtds/class-directory.dtd: Likewise.

2003-09-16  Stefan Seefeld  <seefeld@sympatico.ca>

	* qmdist/command/install_data.py: Do not generate data_dir,
	as this isn't reliable (windows installer).
	* qm/__init__.py: Do not use predefined data_dir.
	* qm/test/qmtest.py: Deduce data_dir from sys.argv[0].

2003-09-15  Mark Mitchell  <mark@codesourcery.com>

	* qm/extension.py (make_dom_document): Simplify.
	* qm/user.py (XmlDatabase.Write): Likewise.
	* qm/xmlutil.py (make_system_id): Use CodeSourcery URLs.
	(make_public_id): New function.
	(create_dom_document): Compute full system and public identifiers
	here.